# test_highgui

./: CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py
.github/worflows/: ci.yml
.github/workflows/: ci.yml
models/: detection-precision-npu-2025-08-05T06-13-14.743Z_channel_ptq_vvip.tflite
profiles/: default  imx8mpevk
src/: anchors_v3.h  anchors_v3.npy  identique_ratio.cpp
